# slippi-rust-extensions

./: Cargo.toml
examples/test_matchmaking/: Cargo.toml
examples/test_matchmaking/src/: main.rs
exi/: Cargo.toml
exi/src/: lib.rs
ffi/: Cargo.toml
ffi/includes/: SlippiRustExtensions.h
ffi/src/: exi.rs  game_reporter.rs  lib.rs  matchmaking.rs  netplay.rs  rank_info.rs  user.rs
game-reporter/: Cargo.toml
game-reporter/src/: lib.rs  queue.rs  types.rs
netplay/: Cargo.toml
netplay/src/: context.rs  enet.rs  lib.rs  matchmaking.rs  netplay.rs  pad.rs  state.rs  utils.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
slippi-gg-api/src/: lib.rs
user/src/: lib.rs
