[package]
name = "slippi-netplay"
version = "0.1.0"
edition = "2024"

[dependencies]
dolphin-integrations = { path = "../dolphin" }
slippi-shared-types = { path = "../shared-types" }
slippi-user = { path = "../user" }

rusty_enet = "0.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
slippi-gg-api = { path = "../slippi-gg-api" }
